<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neuronbot2_bringup</name>
  <version>0.0.0</version>
  <description>
    ROS2 launch scripts for starting the Neuronbot2
  </description>
  <license>TODO</license>
  <!--<author email="xxxx@xxx.xx.x">SYY</author>-->
  <maintainer email="b10307115@gapps.ntust.edu.tw">airuchen</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>serial</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>robot_localization</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
