<?xml version="1.0"?>
<package format="2">
  <name>neuronbot2_bringup</name>
  <version>0.0.0</version>
  <description>The neuronbot2_bringup package</description>
  <maintainer email="ting.chang@adlinktech.com">Ting Chang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>neuronbot2_msgs</buildtool_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
