<?xml version="1.0"?>
<package format="2">
  <name>neuronbot2_description</name>
  <version>0.0.0</version>
  <description>Description of NeuronBot2</description>
	<maintainer email="ting.chang@adlinktech.com">Ting Chang</maintainer>
	<license>Apache-2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
