<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neuronbot2_msgs</name>
  <version>0.0.0</version>
  <description>
    3D models of the Neuronbot2 for simulation and visualization
  </description>
  <!--<author email="xxxx@xxx.xx.x">SYY</author> -->
  <author email="b10307115@gapps.ntust.edu.tw">airuchen</author>
  <maintainer email="b10307115@gapps.ntust.edu.tw">airuchen</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>


