<?xml version="1.0"?>
<package format="2">
	<name>neuronbot2_nav</name>
	<version>0.0.0</version>
	<description>NeuronBot2 navigation package</description>
	<maintainer email="ting.chang@adlinktech.com">Ting Chang</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>amcl</build_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<build_export_depend>nav_msgs</build_export_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>tf</build_export_depend>
	<build_export_depend>amcl</build_export_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>tf</exec_depend>
	<exec_depend>amcl</exec_depend>
	<exec_depend>map_server</exec_depend>
	<exec_depend>move_base</exec_depend>
	<exec_depend>dwa_local_planner</exec_depend>
    <exec_depend>teb_local_planner</exec_depend>
    <exec_depend>global_planner</exec_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
